--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="pt-br"> <!--Início da estrutura -->
+<head> <!-- Cabeçalho da página:contém os metadados do documento -->
 <meta charset="utf-8">
+<meta name="description" content="Explicação sobre processo de graduação Muay Thai"> 
 <title>Muay Prajied</title>
 <style>
 th, td{
@@ -9,7 +10,7 @@ th, td{
 	border-radius:5px;
 }
 th{
-	background-color:#970C10;
+	background-color:#970C10; 
 }
 td{
 	background-color:#ffffff;
@@ -28,79 +29,83 @@ th{
 }
 </style>
 </head>
-<body style="background-color:#ffffff;">
+<body style="background-color:#ffffff;"> 
 
  <h1 style="font-size:60px; color:#153250;text-align:center;font-family:optima">Muay Prajied</h1>  
    
 
  
 <p style="font-family:optima; color:#000000">Seja bem vindo(a), os materiais disponibilizados buscam explicar o processo de graduação de acordo com o padrão da CMTB (Confederação de Muay Thai do Brasil), para mais informações acerca de Muay Thai acesse o link abaixo: </p>
-<a href="https://cmtb.com.br/muay-thai" title="Confederação de Muay Thai do Brasil">CMTB</a>
-<h2 style="font-family:optima; color:#153250">Processo de aprovação<a name="Processo de aprovação"></a></h2>
-<p style="font-family:optima"> A graduação é um exame que exige muito do físico e mental do indivíduo,  visto que é uma batalha constante entre o esgotamento e a perseverança, tendo em média um duração de um hora a duas, dependendo da prajied almejada. Vale resaltar que durante a realização da avaliação não são permitidas pausas em nenhum momento des de seu inicio até o final.<br>Independente do nível de graduação sempre haverá os seguintes processos citados abaixo, que no geral se mantém os mesmos com algumas modificações como acréscimos ou a exclusão de determinadas partes, abaixo segue o link que específica essa questão:</p>
-<a href="https://cmtb.com.br/valores-e-avaliacao" target="_blank" title="Confederação de Muay Thai do Brasil">CMTB</a> 
-<h3 style="font-family:optima; color:#153250">Condicionamento físico<a name="Condicionamento físico"></a></h3>
+<a href="https://cmtb.com.br/muay-thai" title="Confederação de Muay Thai do Brasil">CMTB</a> <!--Finalidade do link: direcionar para mais informações-->
+<h2 style="font-family:optima; color:#153250">Processo de aprovação<a id="Processo_de_aprovação"></a></h2>
+<p style="font-family:optima"> A graduação é um exame que exige muito do físico e mental do indivíduo, visto que é uma batalha constante entre o esgotamento e a perseverança, tendo em média duração de uma hora a duas, dependendo da prajied almejada. Vale resaltar que durante a realização da avaliação não são permitidas pausas em nenhum momento desde seu início até o final.<br>Independente do nível de graduação sempre haverá os seguintes processos citados abaixo, que no geral se mantém os mesmos com algumas modificações como acréscimos ou a exclusão de determinadas partes, abaixo segue o link que específica essa questão:</p>
+<a href="https://cmtb.com.br/valores-e-avaliacao" target="_blank" title="Confederação de Muay Thai do Brasil">CMTB</a> <!--Finalidade do link: dar acesso as diferenças no processo de graduação-->
+<h3 style="font-family:optima; color:#153250">Condicionamento físico<a id="Condicionamento_físico"></a></h3>
 <p style="font-family:optima">
-A avaliação começa com o condicionamento físico, para alcançar a aprovação neste requisito devem ser executadas três vezes a sequência (Exposta na tabela) completa que vária de prajied para prajied, sendo introduzido cada vez mais volume aos exercícios.</p>
+A avaliação começa com o condicionamento físico, para alcançar a aprovação neste requisito devem ser executadas três vezes a sequência (Exposta na tabela) completa que vária de prajied para prajied, sendo introduzida uma maior quantidade aos exercícios.</p>
 
-<h3 style="font-family:optima; color:#153250">Tabela<a name="Tabela"></a></h3>
-<table style="width:100%">
-<table>
-<thead>
-	<th>Categoria</th>
-	<th>Flexões</th>
+<h3 style="font-family:optima; color:#153250">Tabela<a id="Tabela"></a></h3>
+ 
+<!-- Início da tabela -->
+<table> <!--Escolha cores: utilizei vermelho,branco e azul por serem cores da bandeira tailandesa, país originário do Muay Thai -->
+
+<thead> <!-- Cabeçalho da tabela -->
+	<tr>
+	<th>Categoria</th> <!-- colunas -->
+	<th>Flexões</th>   
 	<th>Lombares</th>
 	<th>Abdômen</th>
+    </tr>
 </thead>
 <tr>
-	<td>Iniciante</td>
+	<td>Iniciante</td> <!-- linha1 -->
 	<td>15-20</td>
 	<td>15-20</td>
 	<td>30-40</td>
 </tr>
 <tr>
-	<td>Intermediário</td>
+	<td>Intermediário</td> <!-- linha2 -->
 	<td>25-30-35</td>
 	<td>25-30-35</td>
 	<td>50-60-70</td>
 </tr>
 <tr>
-	<td>Instrutor</td>
+	<td>Instrutor</td> <!-- linha3 -->
 	<td>40-45</td>
 	<td>40-45</td>
 	<td>80-90</td>
 </tr>
-<tfoot>
+<tfoot> <!--Rodapé da tabela -->
 	<tr>
 		<th colspan='4' style="font-family:optima">Condicionamento físico exigido</th>
 	</tr>
 </tfoot>
-</table>
+</table>  <!-- Fim da tabela -->
 
-<h3 style="font-family:optima; color:#153250">Técnica Muay Thai<a name="Técnica Muay Thai"></a></h3>
-<p style="font-family:optima">Dentre esse requisito podemos subdividi-lo em partes, sombra (consiste na prática de uma simulação de luta executada contra um oponente imaginário); combinações (contém uma sequência de sete lutas combinadas, no geral tem a mesma disposição de socos, se diferenciando principalmente nos chutes, joelhadas e bloqueios); clinch(forma de dominação, que consiste em desferir mais comumente joelhadas no adversário )Rounds de Sparring (luta espontânea), saco de pancadas (sequências de golpes variados que englobam toda a arte marcial) por último mas não menos importante pao( o indivíduo é guiado a acerta-lo a depender de sua posição).
+<h3 style="font-family:optima; color:#153250">Técnica Muay Thai<a id="Técnica_Muay_Thai"></a></h3>
+<p style="font-family:optima">Dentre esse requisito podemos subdividí-lo em partes, sombra (consiste na prática de uma simulação de luta executada contra um oponente imaginário); combinações (contém uma sequência de sete lutas combinadas, no geral tem a mesma disposição de socos, se diferenciando principalmente nos chutes, joelhadas e bloqueios); clinch (forma de dominação, que consiste em desferir mais comumente joelhadas no adversário);  Rounds de Sparring (luta espontânea); saco de pancadas (sequências de golpes variados que englobam toda a arte marcial) e por último mas não menos importante pao (o indivíduo é guiado a acerta-lo a depender de sua posição).
 </p>
  <p> <img src="https://img.freepik.com/fotos-gratis/mma-dois-lutadores-profissionais-socando-ou-boxeando-isolados-na-parede-azul-em-neon_155003-15575.jpg?t=st=1734117662~exp=1734121262~hmac=0f233ba0315e7fdf72db75b605b7faf87edbf4058cba91d33886d7c7080148a0&w=740" alt="LutaMuayThai" 
 style="width:350px;height:240px;"><br>Desing by Freepik</p>
 
-<h3 style="font-family:optima; color:#153250">Teoria<a name="Teoria"></a></h3>
-<p style="font-family:optima">Consiste na apresentação de algum fator relacionando ao muay thai, seja sobre sua história ou influência, o qual mais alto for sua graduação, há uma cobrança maior na apresentação de informações mais coerentes e diversificadas. Esse é o ultimo processo exigido, a graduação possibilita adquirir á partir da prajied branca ponta vermelha até a preta, visto que a preta ponta branca (Mestre) e preta ponta branca ponta vermelha (Grão Mestre) só serão adquiridas por merecimento, que leva em conta uma serie de requisitos, para mais informações sobre Muay Thai acesse o link abaixo:  </p>
+<h3 style="font-family:optima; color:#153250">Teoria<a id="Teoria"></a></h3>
+<p style="font-family:optima">Consiste na apresentação de algum fator relacionando ao muay thai, seja sobre sua história ou influência, o qual mais alto for sua graduação, há uma cobrança maior na apresentação de informações mais coerentes e diversificadas. Esse é o último processo exigido, a graduação possibilita adquirir a partir da prajied branca ponta vermelha até a preta, visto que a preta ponta branca (Mestre) e preta ponta branca ponta vermelha (Grão Mestre) só serão adquiridas por merecimento, que leva em conta uma série de requisitos.  </p>
 
 
 <h3 style="font-family:optima; color:#153250">Menu</h3>
-<ul style="list-style-type:none;">
-  <li><a href="#Processo de aprovação">Processo de aprovação</a></li>
-  <li><a href="#Condicionamento físico">Condicionamento físico</a></li>
+<ul style="list-style-type:none;"><!--Finalidade dos links menu: facilitar busca por tópico-->
+  <li><a href="#Processo_de_aprovação">Processo de aprovação</a></li>
+  <li><a href="#Condicionamento_físico">Condicionamento físico</a></li>
   <li><a href="#Tabela">Tabela</a></li>
-  <li><a href="#Técnica Muay Thai">Técnica Muay Thai</a></li>
+  <li><a href="#Técnica_Muay_Thai">Técnica Muay Thai</a></li>
   <li><a href="#Teoria">Teoria</a></li>
 </ul> 
 
-<h3 style="font-family:optima; color:#153250">Contato</h3>
+<h3 style="font-family:optima; color:#153250">Contato</h3><!--Finalidade dos links contato: adquirir mais informações-->
 <a href="https://yata.s3-object.locaweb.com.br/19d8d7514d820375d2e86ef97f542776373085379fdea4b63b7fed74ef375d90" dowload="ImagemPrajied.jpg">Disponibilização dowload Sistema Graduação CMTB</a>
 <p><a href="https://wa.me/5531900000000">
 Clique aqui</a> para WhatsApp</p>
 <p><a href="mailto:muaythai@examplo.com">Clique aqui</a> para enviar um e-mail.</p>
 
 </body>
-</html>
+</html>  <!--Fim da estrutura -->
